ircv3_parse_derive/tests/ui/de/fail/field_unknown_attribute.stderr
error: unknown `#[irc]` attribute `unknown`
 --> tests/ui/de/fail/field_unknown_attribute.rs:5:11
  |
5 |     #[irc(unknown)]
  |           ^^^^^^^
